boost page design change

--- a/src/lib/i18n/strings.en.json
+++ b/src/lib/i18n/strings.en.json
@@ -1,6 +1,6 @@
 {
   "app": {
-    "title": "Bonas",
+    "title": "Obilli",
     "description": "Buy and sell goods, services, and find jobs in Cameroon"
   },
   "nav": {
