--- a/src/lib/i18n/strings.fr.json
+++ b/src/lib/i18n/strings.fr.json
@@ -1,6 +1,6 @@
 {
   "app": {
-    "title": "Bonas",
+    "title": "Obilli",
     "description": "Achetez et vendez des biens, des services et trouvez des emplois au Cameroun"
   },
   "nav": {
