--- a/src/lib/i18n/strings.en.json
+++ b/src/lib/i18n/strings.en.json
@@ -12,7 +12,9 @@
     "admin": "Admin",
     "login": "Login",
     "signup": "Sign Up",
-    "logout": "Logout"
+    "logout": "Logout",
+    "dashboard": "Dashboard",
+    "settings": "Settings"
   },
   "common": {
     "loading": "Loading...",
@@ -23,13 +25,21 @@
     "delete": "Delete",
     "edit": "Edit",
     "view": "View",
+    "viewAll": "View all",
     "back": "Back",
     "next": "Next",
     "previous": "Previous",
     "search": "Search",
     "filter": "Filter",
     "clear": "Clear",
-    "apply": "Apply"
+    "apply": "Apply",
+    "close": "Close",
+    "tryAgain": "Try Again",
+    "goToHomepage": "Go to Homepage",
+    "noResults": "No results found",
+    "theme": "Theme",
+    "language": "Language",
+    "optional": "Optional"
   },
   "currency": {
     "symbol": "XAF",
@@ -49,7 +59,12 @@
     "contact": "Contact Seller",
     "report": "Report Listing",
     "share": "Share",
-    "save": "Save Listing"
+    "save": "Save Listing",
+    "negotiable": "Negotiable",
+    "views": "views",
+    "posted": "Posted",
+    "interestLevel": "Interest level",
+    "notSpecified": "Not specified"
   },
   "types": {
     "good": "Good",
@@ -76,7 +91,10 @@
     "highlighted": "Highlighted",
     "duration": "Duration",
     "days": "days",
-    "purchase": "Purchase Boost"
+    "purchase": "Purchase Boost",
+    "manage": "Manage boost",
+    "active": "Boost Active",
+    "listing": "Boost Listing"
   },
   "messages": {
     "inbox": "Inbox",
@@ -94,6 +112,94 @@
     "forgotPassword": "Forgot Password?",
     "rememberMe": "Remember Me",
     "alreadyAccount": "Already have an account?",
-    "noAccount": "Don't have an account?"
+    "noAccount": "Don't have an account?",
+    "signInTitle": "Sign in to Obilli",
+    "signUpTitle": "Create your account",
+    "signInSubtitle": "Welcome back! Please sign in to continue.",
+    "signUpSubtitle": "Join our marketplace community today.",
+    "fullName": "Full Name",
+    "fullNamePlaceholder": "Your full name",
+    "username": "Username",
+    "usernamePlaceholder": "Choose a username",
+    "usernameRequirements": "3+ characters, letters, numbers, and underscores only",
+    "email": "Email Address",
+    "emailPlaceholder": "Enter your email",
+    "password": "Password",
+    "passwordPlaceholder": "Enter your password",
+    "phone": "Phone Number",
+    "phonePlaceholder": "+237 XXX XXX XXX",
+    "signIn": "Sign In",
+    "createAccount": "Create Account",
+    "pleaseWait": "Please wait...",
+    "accountCreatedMessage": "Account created successfully! Please check your email to confirm your account, then sign in.",
+    "profileSetupError": "Profile setup incomplete. Please contact support.",
+    "profileNotFoundError": "Profile not found. Please contact support.",
+    "unknownError": "An error occurred",
+    "signupError": "An error occurred during signup",
+    "usernameMinLength": "Username must be at least 3 characters",
+    "usernameFormatError": "Username can only contain letters, numbers, and underscores",
+    "usernameTaken": "Username is already taken",
+    "accountExists": "An account with this email already exists. Please sign in instead.",
+    "invalidEmail": "Please enter a valid email address.",
+    "profileCreationWarning": "User created but profile creation failed. Profile will be created on first login."
+  },
+  "home": {
+    "featuredListings": "Featured Listings",
+    "trendingNow": "Trending Now",
+    "recentlyAdded": "Recently Added",
+    "noListingsFound": "No listings found in this category yet.",
+    "welcomeTitle": "Welcome to Obilli Marketplace",
+    "welcomeDescription": "Discover amazing deals in Cameroon",
+    "viewDetails": "View Details",
+    "featuredListing": "Featured Listing",
+    "noListingsCategory": "No listings in {category} yet.",
+    "category": "Category"
+  },
+  "footer": {
+    "browseCategories": "Browse Categories",
+    "copyright": "Marketplace. All rights reserved.",
+    "madeWithLove": "Made with ❤️ in Cameroon"
+  },
+  "search": {
+    "title": "Search",
+    "placeholder": "Search for anything...",
+    "allCategories": "All Categories",
+    "allTypes": "All Types",
+    "goods": "Goods",
+    "services": "Services",
+    "jobs": "Jobs",
+    "priceRange": "Price Range (XAF)",
+    "min": "Min",
+    "max": "Max",
+    "region": "Region",
+    "anyRegion": "Any Region",
+    "condition": "Condition",
+    "anyCondition": "Any Condition",
+    "clearAllFilters": "Clear All Filters",
+    "hideFilters": "Hide Filters",
+    "showFilters": "Show Filters",
+    "gridView": "Grid View",
+    "listView": "List View",
+    "resultsFound": "{count} results found",
+    "noListingsFound": "No listings found",
+    "tryAdjusting": "Try adjusting your search criteria or filters",
+    "previous": "Previous",
+    "next": "Next"
+  },
+  "reviews": {
+    "title": "Reviews",
+    "reviews": "reviews",
+    "writeReview": "Write Review",
+    "rating": "Rating",
+    "titlePlaceholder": "Brief summary of your review",
+    "comment": "Comment",
+    "commentPlaceholder": "Share your experience...",
+    "submit": "Submit Review",
+    "submitting": "Submitting...",
+    "cannotReviewOwn": "Cannot Review Own Listing",
+    "alreadyReviewed": "You have already reviewed this seller for this listing.",
+    "failedSubmit": "Failed to submit review",
+    "unknownDate": "Unknown date",
+    "similarListings": "Similar Listings"
   }
 }
