--- a/src/lib/i18n/strings.fr.json
+++ b/src/lib/i18n/strings.fr.json
@@ -12,7 +12,9 @@
     "admin": "Admin",
     "login": "Connexion",
     "signup": "S'inscrire",
-    "logout": "Déconnexion"
+    "logout": "Déconnexion",
+    "dashboard": "Tableau de bord",
+    "settings": "Paramètres"
   },
   "common": {
     "loading": "Chargement...",
@@ -23,13 +25,21 @@
     "delete": "Supprimer",
     "edit": "Modifier",
     "view": "Voir",
+    "viewAll": "Voir tout",
     "back": "Retour",
     "next": "Suivant",
     "previous": "Précédent",
     "search": "Rechercher",
     "filter": "Filtrer",
     "clear": "Effacer",
-    "apply": "Appliquer"
+    "apply": "Appliquer",
+    "close": "Fermer",
+    "tryAgain": "Réessayer",
+    "goToHomepage": "Aller à l'accueil",
+    "noResults": "Aucun résultat trouvé",
+    "theme": "Thème",
+    "language": "Langue",
+    "optional": "Optionnel"
   },
   "currency": {
     "symbol": "XAF",
@@ -49,7 +59,12 @@
     "contact": "Contacter le Vendeur",
     "report": "Signaler l'Annonce",
     "share": "Partager",
-    "save": "Sauvegarder l'Annonce"
+    "save": "Sauvegarder l'Annonce",
+    "negotiable": "Négociable",
+    "views": "vues",
+    "posted": "Publié",
+    "interestLevel": "Niveau d'intérêt",
+    "notSpecified": "Non spécifié"
   },
   "types": {
     "good": "Bien",
@@ -76,7 +91,10 @@
     "highlighted": "Mis en évidence",
     "duration": "Durée",
     "days": "jours",
-    "purchase": "Acheter un Boost"
+    "purchase": "Acheter un Boost",
+    "manage": "Gérer le boost",
+    "active": "Boost Actif",
+    "listing": "Booster l'annonce"
   },
   "messages": {
     "inbox": "Boîte de réception",
@@ -94,6 +112,94 @@
     "forgotPassword": "Mot de passe oublié?",
     "rememberMe": "Se souvenir de moi",
     "alreadyAccount": "Vous avez déjà un compte?",
-    "noAccount": "Vous n'avez pas de compte?"
+    "noAccount": "Vous n'avez pas de compte?",
+    "signInTitle": "Connectez-vous à Obilli",
+    "signUpTitle": "Créez votre compte",
+    "signInSubtitle": "Bon retour ! Veuillez vous connecter pour continuer.",
+    "signUpSubtitle": "Rejoignez notre communauté de marché aujourd'hui.",
+    "fullName": "Nom complet",
+    "fullNamePlaceholder": "Votre nom complet",
+    "username": "Nom d'utilisateur",
+    "usernamePlaceholder": "Choisissez un nom d'utilisateur",
+    "usernameRequirements": "3+ caractères, lettres, chiffres et underscores uniquement",
+    "email": "Adresse e-mail",
+    "emailPlaceholder": "Entrez votre e-mail",
+    "password": "Mot de passe",
+    "passwordPlaceholder": "Entrez votre mot de passe",
+    "phone": "Numéro de téléphone",
+    "phonePlaceholder": "+237 XXX XXX XXX",
+    "signIn": "Se connecter",
+    "createAccount": "Créer un compte",
+    "pleaseWait": "Veuillez patienter...",
+    "accountCreatedMessage": "Compte créé avec succès ! Veuillez vérifier votre e-mail pour confirmer votre compte, puis connectez-vous.",
+    "profileSetupError": "Configuration du profil incomplète. Veuillez contacter le support.",
+    "profileNotFoundError": "Profil introuvable. Veuillez contacter le support.",
+    "unknownError": "Une erreur s'est produite",
+    "signupError": "Une erreur s'est produite lors de l'inscription",
+    "usernameMinLength": "Le nom d'utilisateur doit comporter au moins 3 caractères",
+    "usernameFormatError": "Le nom d'utilisateur ne peut contenir que des lettres, des chiffres et des underscores",
+    "usernameTaken": "Ce nom d'utilisateur est déjà pris",
+    "accountExists": "Un compte avec cet e-mail existe déjà. Veuillez vous connecter à la place.",
+    "invalidEmail": "Veuillez entrer une adresse e-mail valide.",
+    "profileCreationWarning": "Utilisateur créé mais la création du profil a échoué. Le profil sera créé lors de la première connexion."
+  },
+  "home": {
+    "featuredListings": "Annonces en Vedette",
+    "trendingNow": "Tendances Actuelles",
+    "recentlyAdded": "Récemment Ajoutées",
+    "noListingsFound": "Aucune annonce trouvée dans cette catégorie pour le moment.",
+    "welcomeTitle": "Bienvenue sur Obilli Marketplace",
+    "welcomeDescription": "Découvrez des offres incroyables au Cameroun",
+    "viewDetails": "Voir les détails",
+    "featuredListing": "Annonce en Vedette",
+    "noListingsCategory": "Aucune annonce dans {category} pour le moment.",
+    "category": "Catégorie"
+  },
+  "footer": {
+    "browseCategories": "Parcourir les catégories",
+    "copyright": "Marketplace. Tous droits réservés.",
+    "madeWithLove": "Fait avec ❤️ au Cameroun"
+  },
+  "search": {
+    "title": "Recherche",
+    "placeholder": "Rechercher n'importe quoi...",
+    "allCategories": "Toutes les catégories",
+    "allTypes": "Tous les types",
+    "goods": "Biens",
+    "services": "Services",
+    "jobs": "Emplois",
+    "priceRange": "Fourchette de prix (XAF)",
+    "min": "Min",
+    "max": "Max",
+    "region": "Région",
+    "anyRegion": "Toute région",
+    "condition": "État",
+    "anyCondition": "Tout état",
+    "clearAllFilters": "Effacer tous les filtres",
+    "hideFilters": "Masquer les filtres",
+    "showFilters": "Afficher les filtres",
+    "gridView": "Vue grille",
+    "listView": "Vue liste",
+    "resultsFound": "{count} résultats trouvés",
+    "noListingsFound": "Aucune annonce trouvée",
+    "tryAdjusting": "Essayez d'ajuster vos critères de recherche ou vos filtres",
+    "previous": "Précédent",
+    "next": "Suivant"
+  },
+  "reviews": {
+    "title": "Avis",
+    "reviews": "avis",
+    "writeReview": "Écrire un avis",
+    "rating": "Note",
+    "titlePlaceholder": "Bref résumé de votre avis",
+    "comment": "Commentaire",
+    "commentPlaceholder": "Partagez votre expérience...",
+    "submit": "Soumettre l'avis",
+    "submitting": "Soumission...",
+    "cannotReviewOwn": "Impossible d'évaluer sa propre annonce",
+    "alreadyReviewed": "Vous avez déjà évalué ce vendeur pour cette annonce.",
+    "failedSubmit": "Échec de la soumission de l'avis",
+    "unknownDate": "Date inconnue",
+    "similarListings": "Annonces similaires"
   }
 }
