translation fix on sell page

--- a/src/lib/i18n/strings.en.json
+++ b/src/lib/i18n/strings.en.json
@@ -201,5 +201,131 @@
     "failedSubmit": "Failed to submit review",
     "unknownDate": "Unknown date",
     "similarListings": "Similar Listings"
+  },
+  "sell": {
+    "createNewListing": "Create New Listing",
+    "shareItems": "Share your items, services, or job opportunities with the community",
+    "stepTitle": "Step {current}: {title}",
+    "typeCategoryLocation": "Type, Category & Location",
+    "basicInfo": "Basic Info",
+    "pricingDetails": "Pricing & Details",
+    "photos": "Photos",
+    "previewPublish": "Preview & Publish",
+    "whatListing": "What are you listing?",
+    "sellItem": "Sell an Item",
+    "physicalGoods": "Physical goods and products",
+    "offerService": "Offer a Service",
+    "skillsServices": "Skills and professional services",
+    "postJob": "Post a Job",
+    "employmentOpportunities": "Employment opportunities",
+    "categoryRequired": "Category *",
+    "locationOptional": "Location (Optional)",
+    "selectCategory": "Select a category",
+    "selectLocation": "Select a location",
+    "basicInformation": "Basic Information",
+    "titleRequired": "Title *",
+    "whatListingPlaceholder": "What are you listing?",
+    "titleCharacters": "{count}/100 characters",
+    "descriptionRequired": "Description *",
+    "provideDetails": "Provide details about your listing...",
+    "descriptionCharacters": "{count}/1000 characters",
+    "jobDetails": "Job Details",
+    "servicePackages": "Service Packages",
+    "createPackages": "Create packages for your service",
+    "addPackage": "Add Package",
+    "packageNameRequired": "Package Name *",
+    "logoDesign": "e.g., Logo Design",
+    "priceXafRequired": "Price (XAF) *",
+    "deliveryDaysRequired": "Delivery (days) *",
+    "includedPackage": "What's included in this package?",
+    "addServicePackages": "Add service packages to offer different options",
+    "createFirstPackage": "Create First Package",
+    "condition": "Condition",
+    "new": "New",
+    "neverUsed": "Never used, in original packaging",
+    "used": "Used",
+    "previouslyOwned": "Previously owned, good condition",
+    "refurbished": "Refurbished",
+    "restoredWorking": "Restored to working condition",
+    "priceXaf": "Price (XAF)",
+    "enterPriceXaf": "Enter price in XAF",
+    "priceNegotiable": "Price is negotiable",
+    "addPhotos": "Add Photos",
+    "dragDropImages": "Drag & Drop Images Here",
+    "clickBrowseFiles": "Or click to browse your files",
+    "selectImages": "Select Images",
+    "supportedFormats": "Supported: JPG, PNG, GIF (max 10MB each)",
+    "maxImages": "Maximum 10 images allowed",
+    "uploadedImages": "Uploaded Images ({count}/10)",
+    "addMore": "+ Add More",
+    "addMoreImages": "Add more images",
+    "tipsBetterPhotos": "Tips for better photos:",
+    "useGoodLighting": "Use good lighting and take clear, focused shots",
+    "showMultipleAngles": "Show the item from multiple angles",
+    "includeDetails": "Include any important details or flaws",
+    "dragReorder": "Drag images to reorder them (first image is the main photo)",
+    "previewListing": "Preview Your Listing",
+    "howBuyersSee": "How buyers will see your listing",
+    "listingTitleAppear": "Your listing title will appear here",
+    "negotiable": "Negotiable",
+    "noLocationSpecified": "No location specified",
+    "notSelected": "Not selected",
+    "notSpecified": "Not specified",
+    "imagesUploaded": "{count} uploaded",
+    "servicePackagesConfigured": "{count} configured",
+    "listingSummary": "Listing Summary",
+    "type": "Type:",
+    "category": "Category:",
+    "location": "Location:",
+    "images": "Images:",
+    "price": "Price:",
+    "conditionLabel": "Condition:",
+    "servicePackagesLabel": "Service Packages:",
+    "description": "Description",
+    "daysDelivery": "{days} days delivery",
+    "readyPublish": "Ready to publish?",
+    "oncePublished": "Once published, your listing will be visible to all users. You can edit or remove it later from your seller dashboard.",
+    "previous": "Previous",
+    "next": "Next",
+    "publishListing": "Publish Listing",
+    "publishing": "Publishing...",
+    "listingPublished": "Listing Published Successfully!",
+    "listingLive": "Your listing \"{title}\" is now live and visible to buyers.",
+    "viewListing": "View Listing",
+    "seeListingBuyers": "See how your listing appears to buyers",
+    "openListing": "Open Listing",
+    "goHome": "Go Home",
+    "returnHomepage": "Return to the marketplace homepage",
+    "browseMarketplace": "Browse Marketplace",
+    "boostListing": "Boost Listing",
+    "getVisibility": "Get more visibility with premium features",
+    "exploreBoosts": "Explore Boosts",
+    "boostListingBetter": "Boost Your Listing for Better Results",
+    "increaseVisibility": "Increase your listing's visibility and attract more buyers with our boost options.",
+    "featured": "Featured",
+    "standSearch": "Stand out in search results",
+    "fromPrice": "From {price} XAF",
+    "premium": "Premium",
+    "priorityPlacement": "Priority placement & badges",
+    "top": "Top",
+    "appearTop": "Appear at the top of listings",
+    "boostMyListing": "Boost My Listing",
+    "shareListing": "Share Your Listing",
+    "helpBuyers": "Help potential buyers find your listing by sharing it on social media.",
+    "copy": "Copy",
+    "copied": "Copied!",
+    "share": "Share",
+    "tipsSuccess": "💡 Tips for Success",
+    "respondQuickly": "Respond quickly to buyer inquiries to build trust",
+    "keepUpdated": "Keep your listing updated with accurate information",
+    "considerBoosting": "Consider boosting your listing for better visibility",
+    "shareSocialMedia": "Share your listing on social media to reach more buyers",
+    "myListing": "My Listing",
+    "checkListing": "Check out my listing on Obilli Marketplace",
+    "redirecting": "Redirecting...",
+    "authenticationRequired": "Authentication Required",
+    "signInCreate": "You need to be signed in to create a listing.",
+    "signIn": "Sign In",
+    "loading": "Loading..."
   }
 }
