--- a/src/lib/i18n/strings.fr.json
+++ b/src/lib/i18n/strings.fr.json
@@ -201,5 +201,131 @@
     "failedSubmit": "Échec de la soumission de l'avis",
     "unknownDate": "Date inconnue",
     "similarListings": "Annonces similaires"
+  },
+  "sell": {
+    "createNewListing": "Créer une Nouvelle Annonce",
+    "shareItems": "Partagez vos articles, services ou opportunités d'emploi avec la communauté",
+    "stepTitle": "Étape {current}: {title}",
+    "typeCategoryLocation": "Type, Catégorie et Localisation",
+    "basicInfo": "Informations de Base",
+    "pricingDetails": "Tarification et Détails",
+    "photos": "Photos",
+    "previewPublish": "Aperçu et Publication",
+    "whatListing": "Que proposez-vous ?",
+    "sellItem": "Vendre un Article",
+    "physicalGoods": "Biens physiques et produits",
+    "offerService": "Proposer un Service",
+    "skillsServices": "Compétences et services professionnels",
+    "postJob": "Publier un Emploi",
+    "employmentOpportunities": "Opportunités d'emploi",
+    "categoryRequired": "Catégorie *",
+    "locationOptional": "Localisation (Optionnel)",
+    "selectCategory": "Sélectionner une catégorie",
+    "selectLocation": "Sélectionner une localisation",
+    "basicInformation": "Informations de Base",
+    "titleRequired": "Titre *",
+    "whatListingPlaceholder": "Que proposez-vous ?",
+    "titleCharacters": "{count}/100 caractères",
+    "descriptionRequired": "Description *",
+    "provideDetails": "Fournissez des détails sur votre annonce...",
+    "descriptionCharacters": "{count}/1000 caractères",
+    "jobDetails": "Détails de l'Emploi",
+    "servicePackages": "Forfaits de Service",
+    "createPackages": "Créez des forfaits pour votre service",
+    "addPackage": "Ajouter un Forfait",
+    "packageNameRequired": "Nom du Forfait *",
+    "logoDesign": "ex., Conception de Logo",
+    "priceXafRequired": "Prix (XAF) *",
+    "deliveryDaysRequired": "Livraison (jours) *",
+    "includedPackage": "Qu'est-ce qui est inclus dans ce forfait ?",
+    "addServicePackages": "Ajoutez des forfaits de service pour offrir différentes options",
+    "createFirstPackage": "Créer le Premier Forfait",
+    "condition": "État",
+    "new": "Neuf",
+    "neverUsed": "Jamais utilisé, dans l'emballage d'origine",
+    "used": "Utilisé",
+    "previouslyOwned": "Précédemment possédé, bon état",
+    "refurbished": "Reconditionné",
+    "restoredWorking": "Restauré à un état de fonctionnement",
+    "priceXaf": "Prix (XAF)",
+    "enterPriceXaf": "Entrez le prix en XAF",
+    "priceNegotiable": "Prix négociable",
+    "addPhotos": "Ajouter des Photos",
+    "dragDropImages": "Glisser-Déposer des Images Ici",
+    "clickBrowseFiles": "Ou cliquez pour parcourir vos fichiers",
+    "selectImages": "Sélectionner des Images",
+    "supportedFormats": "Formats supportés: JPG, PNG, GIF (max 10MB chacun)",
+    "maxImages": "Maximum 10 images autorisées",
+    "uploadedImages": "Images Téléchargées ({count}/10)",
+    "addMore": "+ Ajouter Plus",
+    "addMoreImages": "Ajouter plus d'images",
+    "tipsBetterPhotos": "Conseils pour de meilleures photos:",
+    "useGoodLighting": "Utilisez un bon éclairage et prenez des photos nettes et cadrées",
+    "showMultipleAngles": "Montrez l'article sous plusieurs angles",
+    "includeDetails": "Incluez tous les détails ou défauts importants",
+    "dragReorder": "Faites glisser les images pour les réorganiser (la première image est la photo principale)",
+    "previewListing": "Aperçu de Votre Annonce",
+    "howBuyersSee": "Comment les acheteurs verront votre annonce",
+    "listingTitleAppear": "Le titre de votre annonce apparaîtra ici",
+    "negotiable": "Négociable",
+    "noLocationSpecified": "Aucune localisation spécifiée",
+    "notSelected": "Non sélectionné",
+    "notSpecified": "Non spécifié",
+    "imagesUploaded": "{count} téléchargées",
+    "servicePackagesConfigured": "{count} configurés",
+    "listingSummary": "Résumé de l'Annonce",
+    "type": "Type:",
+    "category": "Catégorie:",
+    "location": "Localisation:",
+    "images": "Images:",
+    "price": "Prix:",
+    "conditionLabel": "État:",
+    "servicePackagesLabel": "Forfaits de Service:",
+    "description": "Description",
+    "daysDelivery": "{days} jours de livraison",
+    "readyPublish": "Prêt à publier ?",
+    "oncePublished": "Une fois publiée, votre annonce sera visible par tous les utilisateurs. Vous pourrez la modifier ou la supprimer plus tard depuis votre tableau de bord vendeur.",
+    "previous": "Précédent",
+    "next": "Suivant",
+    "publishListing": "Publier l'Annonce",
+    "publishing": "Publication...",
+    "listingPublished": "Annonce Publiée avec Succès !",
+    "listingLive": "Votre annonce \"{title}\" est maintenant en ligne et visible par les acheteurs.",
+    "viewListing": "Voir l'Annonce",
+    "seeListingBuyers": "Voyez comment votre annonce apparaît aux acheteurs",
+    "openListing": "Ouvrir l'Annonce",
+    "goHome": "Accueil",
+    "returnHomepage": "Retourner à la page d'accueil du marché",
+    "browseMarketplace": "Parcourir le Marché",
+    "boostListing": "Booster l'Annonce",
+    "getVisibility": "Obtenez plus de visibilité avec des fonctionnalités premium",
+    "exploreBoosts": "Explorer les Boosts",
+    "boostListingBetter": "Boostez Votre Annonce pour de Meilleurs Résultats",
+    "increaseVisibility": "Augmentez la visibilité de votre annonce et attirez plus d'acheteurs avec nos options de boost.",
+    "featured": "En Vedette",
+    "standSearch": "Mettez-vous en évidence dans les résultats de recherche",
+    "fromPrice": "À partir de {price} XAF",
+    "premium": "Premium",
+    "priorityPlacement": "Placement prioritaire et badges",
+    "top": "Haut",
+    "appearTop": "Apparaître en haut des annonces",
+    "boostMyListing": "Booster Mon Annonce",
+    "shareListing": "Partager Votre Annonce",
+    "helpBuyers": "Aidez les acheteurs potentiels à trouver votre annonce en la partageant sur les réseaux sociaux.",
+    "copy": "Copier",
+    "copied": "Copié!",
+    "share": "Partager",
+    "tipsSuccess": "💡 Conseils pour le Succès",
+    "respondQuickly": "Répondez rapidement aux demandes des acheteurs pour établir la confiance",
+    "keepUpdated": "Gardez votre annonce à jour avec des informations précises",
+    "considerBoosting": "Envisagez de booster votre annonce pour une meilleure visibilité",
+    "shareSocialMedia": "Partagez votre annonce sur les réseaux sociaux pour atteindre plus d'acheteurs",
+    "myListing": "Mon Annonce",
+    "checkListing": "Découvrez mon annonce sur Obilli Marketplace",
+    "redirecting": "Redirection...",
+    "authenticationRequired": "Authentification Requise",
+    "signInCreate": "Vous devez être connecté pour créer une annonce.",
+    "signIn": "Se Connecter",
+    "loading": "Chargement..."
   }
 }
