--- a/src/lib/i18n/strings.en.json
+++ b/src/lib/i18n/strings.en.json
@@ -315,6 +315,7 @@
     "copy": "Copy",
     "copied": "Copied!",
     "share": "Share",
+    "getStarted": "Get Started",
     "tipsSuccess": "💡 Tips for Success",
     "respondQuickly": "Respond quickly to buyer inquiries to build trust",
     "keepUpdated": "Keep your listing updated with accurate information",
