--- a/src/lib/i18n/strings.fr.json
+++ b/src/lib/i18n/strings.fr.json
@@ -315,6 +315,7 @@
     "copy": "Copier",
     "copied": "Copié!",
     "share": "Partager",
+    "getStarted": "Commencer",
     "tipsSuccess": "💡 Conseils pour le Succès",
     "respondQuickly": "Répondez rapidement aux demandes des acheteurs pour établir la confiance",
     "keepUpdated": "Gardez votre annonce à jour avec des informations précises",
